--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="js/data.js"></script>
     <script src="js/cookies.js"></script>
     <script src="js/images.js"></script>
+    <script src="js/validation.js"></script>
 
     <!-- Importing .css style -->
     <link rel="stylesheet" href="css/style.css">
